Work on actual quest steps